[gd_scene load_steps=7 format=3 uid="uid://m5y6kkm7oano"]

[ext_resource type="Script" uid="uid://cpo11dncyvkv8" path="res://scripts/collect_game.gd" id="1_5yvvx"]
[ext_resource type="PackedScene" uid="uid://dfgbx6h5baf5v" path="res://mob.tscn" id="2_g5xa4"]
[ext_resource type="Texture2D" uid="uid://da8wd3qt4kpim" path="res://HUD/Backgrounds/MinigameBackground.png" id="3_8xkqx"]
[ext_resource type="PackedScene" uid="uid://b4rkim16c8n7f" path="res://Scenes/player2.tscn" id="4_q01pv"]
[ext_resource type="PackedScene" uid="uid://c4aaqufb6ipv5" path="res://hud_c.tscn" id="5_g7je8"]

[sub_resource type="Curve2D" id="Curve2D_8vm6b"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1280, 0, 0, 0, 0, 0, 1280, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="CollectGame" type="Node"]
script = ExtResource("1_5yvvx")
mob_scene = ExtResource("2_g5xa4")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("3_8xkqx")

[node name="Player" parent="." instance=ExtResource("4_q01pv")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(168, 576)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_8vm6b")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUDc" parent="." instance=ExtResource("5_g7je8")]

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUDc" to="." method="new_game"]
